separacion del scss en partials

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </nav>
     </header>
     <main>
+
         <h1 class="escuelaDeSurf animate__animated animate__bounce">Escuela de Surf</h1>
         <img src="../imagenes_surf/Maremasma_Surf1.jpg" alt="">
         <p>
@@ -56,7 +57,7 @@
             sus
             conocimientos. Llevamos más de 5 años trabajando en nuestra pasión y ponemos toda nuestra ilusión en ello.
         </p>
-        <iframe width="800" height="500" src="https://www.youtube.com/embed/S8XRVwMj6D0" title="YouTube video player"
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/S8XRVwMj6D0" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -64,12 +65,10 @@
         <h3 class="playita">Nuestra playa Santa Maria del Mar</h3>
         <section class="seccionPlayita">
             <article>
-                <div class="imagen1"><img src="./imagenes_surf/nustraplaya1.jpg" alt=""></div>
-                <div class="imagen1"><img src="./imagenes_surf/nuestraplaya2.jpg" alt=""></div>
                 <div class="imagen1">
+                    <img src="./imagenes_surf/nustraplaya1.jpg" alt="">
+                    <img src="./imagenes_surf/nuestraplaya2.jpg" alt="">
                     <img src="./imagenes_surf/nuestraplaya5.jpg" alt="">
-                </div>
-                <div class="imagen1">
                     <img src="./imagenes_surf/nuestraplaya4.jpg" alt="">
                 </div>
 
@@ -81,11 +80,6 @@
 
         </section>
 
-
-
-        <section>
-            <h2></h2>
-        </section>
 
 
 
