--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-header">
             <div class="container-fluid">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -79,7 +79,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="bg-footer">
         <p>© 2022 Surfcadiz by Wc.</p>
 
         <a href="https://web.whatsapp.com/"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
