sustituidos los lorem

--- a/pages/entrenamientos.html
+++ b/pages/entrenamientos.html
@@ -55,27 +55,21 @@
                 <img src="../imagenes_surf/entrenador manuel.jpg" alt="manuel">
                 <h3>Manuel Sanchez</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro vero veniam ullam velit ex obcaecati
-                blanditiis necessitatibus praesentium, delectus consectetur deserunt doloribus inventore assumenda vel
-                magni, harum nihil. Totam!</p>
+            <p>Local de Santa Maria del Mar titulado por la Federacion Española de surf</p>
         </section>
         <section>
             <div class="entrenador">
                 <img src="../imagenes_surf/entrenador hugo.jpg" alt="hugo">
                 <h3>Hugo Martinez</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro vero veniam ullam velit ex obcaecati
-                blanditiis necessitatibus praesentium, delectus consectetur deserunt doloribus inventore assumenda vel
-                magni, harum nihil. Totam!</p>
+            <p>Local de Santa Maria del Mar titulado por la Federacion Española de surf</p>
         </section>
         <section>
             <div class="entrenador">
                 <img src="../imagenes_surf/entrenador pablo.jpg" alt="pablo">
                 <h3>Pablo Maqueda</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro vero veniam ullam velit ex obcaecati
-                blanditiis necessitatibus praesentium, delectus consectetur deserunt doloribus inventore assumenda vel
-                magni, harum nihil. Totam!</p>
+            <p>Local de Santa Maria del Mar titulado por la Federacion Española de surf</p>
         </section>
 
     </main>
