--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 
 <head>
     <meta name="keywords" content="surf,turismo,cadiz,verano,vacaciones,playa">
@@ -75,10 +75,10 @@
         <section class="seccionPlayita">
             <article>
                 <div class="imagen1">
-                    <img src="./imagenes_surf/nustraplaya1.jpg" alt="playaDeCadiz">
+                    <img src="./imagenes_surf/nustraplaya1.jpg" alt="vistaDePlaya1">
                     <img src="./imagenes_surf/nuestraplaya2.jpg" alt="playaDeCadiz">
-                    <img src="./imagenes_surf/nuestraplaya5.jpg" alt="playaDeCadiz">
-                    <img src="./imagenes_surf/nuestraplaya4.jpg" alt="playaDeCadiz">
+                    <img src="./imagenes_surf/nuestraplaya5.jpg" alt="playaSantaMaria">
+                    <img src="./imagenes_surf/nuestraplaya4.jpg" alt="playaSurf">
                 </div>
             </article>
         </section>
